# MinecraftClone

./: .gitignore  CMakeLists.txt  buildrun.sh
libs/glad/: glad.lua
libs/glfw/: .cproject  glfw.lua
libs/glfw/docs/: .cproject
libs/glfw/src/: .cproject  wayland-client-protocol-code.h  wayland-viewporter-client-protocol.h
libs/glm/: glm.lua
libs/glm/glm/: .cproject
libs/imgui/: imgui.lua
libs/learnopengl/: camera.h  learnopengl.lua
shaders/: block.frag  block.vert  fragment.frag  vertex.vert
src/: app.cpp  app.h  game.cpp  game.h  main.cpp  vao.cpp  vao.h  vbo.cpp  vbo.h  window.cpp  window.h
